--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                autobank
-version:             0.0.0.0
+version:             0.0.0
 github:              "dimasinger/autobank"
 license:             MIT
 author:              "Dima"
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- ConfigFile >= 1.1.0 && < 1.2
+- gogol-sheets == 0.4.0
 
 library:
   source-dirs: src
